# aoc-2024-c

./: .gitignore  CMakeLists.txt  README.md  lib.c  lib.h  main.c
solutions/: 1.c  CMakeLists.txt
